--- a/src/components/Button.module.css
+++ b/src/components/Button.module.css
@@ -66,7 +66,9 @@ button.hover {
 }
 
 .startIcon,
-.endIcon {
+.endIcon,
+.startIcon:hover,
+.endIcon:hover {
   color: white;
   background-color: hsla(224, 100%, 58%, 1);
   display: flex;
@@ -79,8 +81,11 @@ button.hover {
 }
 
 .sm,
+.sm:hover,
 .md,
-.lg {
+.md:hover,
+.lg,
+.lg:hover {
   background-color: hsla(224, 100%, 58%, 1);
   color: white;
 }
@@ -107,10 +112,25 @@ button.hover {
   background-color: hsla(224, 100%, 58%, 1);
 }
 
+.primary.hover,
+.primary:hover {
+  background-color: hsla(223, 100%, 40%, 1);
+}
+
 .secondary {
   background-color: hsla(199, 18%, 33%, 1);
 }
 
+.secondary.hover,
+.secondary:hover {
+  background-color: hsla(198, 35%, 17%, 1);
+}
+
 .danger {
   background-color: hsla(0, 65%, 51%, 1);
+}
+
+.danger.hover,
+.danger:hover {
+  background-color: hsla(357, 100%, 30%, 1);
 }
