--- a/src/index.css
+++ b/src/index.css
@@ -88,7 +88,7 @@ body {
 }
 
 .variantContainerWide {
-  width: 350px;
+  width: 370px;
   display: flex;
   flex-direction: column;
   gap: 12px;
@@ -101,4 +101,8 @@ h1 {
 
 .main {
   padding: 50px 100px;
+}
+
+.App {
+  display: flex;
 }
